--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
 					<!--slide-7-->
-				<article class="message is-danger slide-7 active">
+				<article class="message is-danger slide-7">
 					<div class="message-header">
 						<p>Thank you.</p>
 					</div>
@@ -107,6 +107,63 @@
 								and search on the basis of your answers.
 							</p>
 						<a class="button is-danger continue">Continue <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+					</div>
+				</article>
+
+						<!--slide-8-->
+				<article class="message is-danger slide-8">
+					<div class="message-header">
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb current"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span></p>
+					</div>
+					<div class="message-body">
+						<p class="has-text-centered">YOUR GENDER? </p>
+						<form >
+							<a class="button is-danger is-outlined">Woman</a>
+							<a class="button is-danger is-outlined">Man</a>
+							<a class="button is-danger is-outlined">Couple</a>
+							<a class="button is-danger is-outlined">Trans</a>
+						</form>
+					</div>
+				</article>
+
+				<!--slide-9-->
+				<article class="message is-danger slide-9">
+					<div class="message-header">
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb current"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span></p>
+					</div>
+					<div class="message-body">
+						<p class="has-text-centered">LOOKING FOR?</p>
+						<form >
+							<a class="button is-danger is-outlined">Woman</a>
+							<a class="button is-danger is-outlined">Man</a>
+							<a class="button is-danger is-outlined">Couple</a>
+							<a class="button is-danger is-outlined">Trans</a>
+						</form>
+					</div>
+				</article>
+
+				<!--slide-10-->
+				<article class="message is-danger slide-10 active">
+					<div class="message-header">
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span><span class="bulb"></span><span class="bulb"></span></p>
+					</div>
+					<div class="message-body">
+						<p class="has-text-centered">WHAT IS YOUR DATE OF BIRTH?</p>
+						<form >
+							<div class="form-elems is-flex">
+								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+								<span class="control">
+									<input class="input is-danger" type="text" name="dd" value="" placeholder="DD">
+								</span>
+								<span class="control">
+									<input class="input is-danger" type="text" name="mm" value="" placeholder="MM">
+								</span>
+								<span class="control">
+									<input class="input is-danger" type="text" name="yy" value="" placeholder="YYYY">
+								</span>
+								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+							</div>
+						</form>
 					</div>
 				</article>
 			</div>
