--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</article>
 
 				<!--slide-10-->
-				<article class="message is-danger slide-10 active">
+				<article class="message is-danger slide-10">
 					<div class="message-header">
 						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span><span class="bulb"></span><span class="bulb"></span></p>
 					</div>
@@ -153,13 +153,51 @@
 							<div class="form-elems is-flex">
 								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
 								<span class="control">
-									<input class="input is-danger" type="text" name="dd" value="" placeholder="DD">
+									<input class="input short is-danger" type="text" name="dd" value="" placeholder="DD">
 								</span>
 								<span class="control">
-									<input class="input is-danger" type="text" name="mm" value="" placeholder="MM">
+									<input class="input short is-danger" type="text" name="mm" value="" placeholder="MM">
 								</span>
 								<span class="control">
-									<input class="input is-danger" type="text" name="yy" value="" placeholder="YYYY">
+									<input class="input short is-danger" type="text" name="yy" value="" placeholder="YYYY">
+								</span>
+								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+							</div>
+						</form>
+					</div>
+				</article>
+
+					<!--slide-11-->
+				<article class="message is-danger slide-11">
+					<div class="message-header">
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span></p>
+					</div>
+					<div class="message-body">
+						<p class="has-text-centered">Email</p>
+						<form >
+							<div class="form-elems is-flex">
+								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+								<span class="control">
+									<input class="input is-danger" type="text" name="email" value="" placeholder="">
+								</span>
+								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+							</div>
+						</form>
+					</div>
+				</article>
+
+				<!--slide-12-->
+				<article class="message is-danger slide-12 active">
+					<div class="message-header">
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span></p>
+					</div>
+					<div class="message-body">
+						<p class="has-text-centered">Password</p>
+						<form >
+							<div class="form-elems is-flex">
+								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+								<span class="control">
+									<input class="input is-danger" type="password" name="pass" value="" placeholder="">
 								</span>
 								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
 							</div>
