--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 					<div class="message-body">
 						<p class="has-text-centered">LOOKING FOR?</p>
 						<form >
-							<a class="button is-danger is-outlined">Woman</a>
-							<a class="button is-danger is-outlined">Man</a>
-							<a class="button is-danger is-outlined">Couple</a>
-							<a class="button is-danger is-outlined">Trans</a>
+							<a class="button is-danger is-outlined next">Woman</a>
+							<a class="button is-danger is-outlined next">Man</a>
+							<a class="button is-danger is-outlined next">Couple</a>
+							<a class="button is-danger is-outlined next">Trans</a>
 						</form>
 					</div>
 				</article>
@@ -198,7 +198,7 @@
 						<p class="has-text-centered">Password</p>
 						<form >
 							<div class="form-elems is-flex">
-								<span class="button is-dark arrow-but arrow-left next"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
 								<span class="control">
 									<input class="input is-danger" type="password" name="pass" value="" placeholder="">
 								</span>
