--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<div class="back-full"></div>
 	<div class="back back-left"></div>
 	<div class="back back-right"></div>
 	<div class="wrapper">
@@ -21,9 +22,23 @@
 		</header>
 		<footer class="footer">
 			<div class="container">
+					<!--slide-1-->
+				<article class="message is-danger slide-1 active">
+					<div class="message-header">
+						<p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></i> This Is NOT A Dating Site!</p>
+					</div>
+					<div class="message-body">
+					<p>Alexxis (32) wants to share her nude 
+						private pictures with you. <br />
+
+						<span>Do you accept?</span></p>
+						<a class="button invis splash is-dark">YES</a>
+						<a class="button invis is-dark" href="https://www.google.com">No</a>
+					</div>
+				</article>
 
 				<!--slide-2-->
-				<article class="message is-danger slide-2 active">
+				<article class="message is-danger slide-2">
 					<div class="message-header">
 						<p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></i> This Is NOT A Dating Site!</p>
 					</div>
@@ -83,7 +98,7 @@
 					<!--slide-6-->
 				<article class="message is-danger slide-6">
 					<div class="message-header">
-						<p>Question <span class="bulb "></span><span class="bulb"></span><span class="bulb current"></span><span class="bulb"></span></p>
+						<p>Question <span class="bulb "></span><span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span></p>
 					</div>
 					<div class="message-body">
 						<p>Are you at least 24 years old? The women have
@@ -173,17 +188,17 @@
 					<!--slide-11-->
 				<article class="message is-danger slide-11">
 					<div class="message-header">
-						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb current"></span></p>
+						<p>DISCREET ADULT ENCOUNTERS! <span class="bulb"></span><span class="bulb"></span><span class="bulb"></span><span class="bulb  current"></span><span class="bulb"></span></p>
 					</div>
 					<div class="message-body">
 						<p class="has-text-centered">Email</p>
 						<form >
 							<div class="form-elems is-flex">
-								<span class="button is-dark arrow-but arrow-left next"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
+								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
 								<span class="control">
 									<input class="input is-danger" type="text" name="email" value="" placeholder="">
 								</span>
-								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+								<span class="button is-danger arrow-but arrow-right next"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
 							</div>
 						</form>
 					</div>
@@ -202,7 +217,7 @@
 								<span class="control">
 									<input class="input is-danger" type="password" name="pass" value="" placeholder="">
 								</span>
-								<span class="button is-danger arrow-but arrow-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+								<span class="button is-danger arrow-but arrow-right next"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
 							</div>
 						</form>
 					</div>
