--- a/index.html
+++ b/index.html
@@ -171,13 +171,35 @@
 							<div class="form-elems is-flex">
 								<span class="button is-dark arrow-but arrow-left"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
 								<span class="control">
-									<input class="input short is-danger" type="text" name="dd" value="" placeholder="DD">
+										<div class="select short is-danger input">
+										<select>
+											<option>DD</option>
+											<option>1</option>
+											<option>2</option>
+										</select>
+										</div>
+									
+									<!-- <input class="input short is-danger" type="text" name="dd" value="" placeholder="DD"> -->
 								</span>
 								<span class="control">
-									<input class="input short is-danger" type="text" name="mm" value="" placeholder="MM">
+										<div class="select short is-danger input">
+										<select>
+											<option>MM</option>
+											<option>01</option>
+											<option>02</option>
+										</select>
+										</div>
+									<!-- <input class="input short is-danger" type="text" name="mm" value="" placeholder="MM"> -->
 								</span>
 								<span class="control">
-									<input class="input short is-danger" type="text" name="yy" value="" placeholder="YYYY">
+										<div class="select short is-danger input">
+										<select>
+											<option>YYYY</option>
+											<option>1970</option>
+											<option>1971</option>
+										</select>
+										</div>
+									<!-- <input class="input short is-danger" type="text" name="yy" value="" placeholder="YYYY"> -->
 								</span>
 								<span class="button is-danger arrow-but arrow-right next"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
 							</div>
