--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 </head>
 
 <body>
-	<div class="back-full"></div>
-	<div class="back back-left"></div>
-	<div class="back back-right"></div>
+	
 	<div class="wrapper">
+		
+			<div class="back-full">
+				<div class="inner-back"></div>
+			</div>
+
+		<div class="back back-left"></div>
+		<div class="back back-right"></div>
 		<header class="header">
 			<div class="logo"></div>
 		</header>
