--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		</header>
 		<footer class="footer">
 			<div class="container">
+				<div class="center">
 					<!--slide-1-->
+
 				<article class="message is-danger slide-1 active">
 					<div class="message-header">
 						<p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></i> This Is NOT A Dating Site!</p>
@@ -43,6 +45,7 @@
 				</article>
 
 				<!--slide-2-->
+				
 				<article class="message is-danger slide-2">
 					<div class="message-header">
 						<p><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></i> This Is NOT A Dating Site!</p>
@@ -55,6 +58,7 @@
 						<a class="button is-dark next">OK</a>
 					</div>
 				</article>
+				
 
 				<!--slide-3-->
 				<article class="message is-danger slide-3">
@@ -249,6 +253,7 @@
 						</form>
 					</div>
 				</article>
+				</div>
 			</div>
 		</footer>
 	</div>
