--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="https://use.fontawesome.com/86b81ac428.js"></script>
 	<script src="main.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 </head>
 
