--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<p>Alexxis (32) wants to share her nude private pictures with you. <br />
 
 								<span>Do you accept?</span></p>
-							<a class="button invis next is-dark">YES</a>
+							<a class="button invis next is-danger">YES</a>
 							<a class="button invis is-dark" href="https://www.google.com">No</a>
 						</div>
 					</article>
