--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</div>
 		<header class="header">
 			<div class="logo"></div>
+			<div class="frame-box"></div>
 		</header>
 		<footer class="footer">
 			<div class="container">
