--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<div class="wrapper">
 		<div class="back-full">
 			<div class="inner-back"></div>
+			<div class="left-ban">place for the left banner</div>
+			<div class="right-ban">place for the right banner</div>
 		</div>
 		<header class="header">
 			<div class="logo"></div>
@@ -291,7 +293,7 @@
 				</div>
 			</div>
 		</footer>
-		<div class="frame-box"></div>
+		<div class="frame-box"> place for the banner </div>
 	</div>
 </body>
 
