--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
 			</div>
 		</footer>
 		<div class="frame-box"> place for the banner </div>
+		<div class="link-block">
+			<a href="#">Privacy Policy</a>
+			<span class="delim"> | </span>
+			<a href="#">Terms Condition </a>
+		</div>
 	</div>
 </body>
 
