--- a/grey.html
+++ b/grey.html
@@ -14,12 +14,50 @@
 </head>
 
 <body>
-	<div class="wrapper-grey">
-		<section class="text">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolores, temporibus iusto sequi dolorem consequuntur inventore in accusantium quos eaque illum quae libero hic ab dignissimos officia minus reprehenderit magni.
-		</section>
 
+	<div class="wrapper">
+		<div class="back-full">
+			<div class="inner-back"></div>
+			<div class="left-ban">place for the left banner</div>
+			<div class="right-ban">place for the right banner</div>
+		</div>
+		<header class="header">
+			<div class="logo"></div>
+		</header>
+		<footer class="footer">
+			<div class="container text">
+			
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+
+				v
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+				
+			
+			</div>
+		</footer>
+		<div class="frame-box"> place for the banner </div>
+		<div class="link-block">
+			<a href="#">Privacy Policy</a>
+			<span class="delim"> | </span>
+			<a href="#">Terms Condition </a>
+		</div>
 	</div>
 </body>
 
 </html>
+
