--- a/grey.html
+++ b/grey.html
@@ -27,26 +27,9 @@
 		<footer class="footer">
 			<div class="container text">
 			
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
+					<h1>PRIVACY POLICY</h1>
+					<p>This privacy statement discloses the information gathering and dissemination practices for this website. We will notify you of changes to our Privacy Policy by posting the new policy on this website and by e-mailing the new Privacy Policy to registered members. For this reason, we recommend that you review our Privacy Policy regularly so that you can stay informed of our practices.</p>
 
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-
-				v
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto ad, fugit tempore nobis, dolorem perspiciatis libero consequatur magni autem praesentium eum! A cupiditate blanditiis non, iusto repellat nihil molestiae.
-				
 			
 			</div>
 		</footer>
