--- a/grey.html
+++ b/grey.html
@@ -29,6 +29,7 @@
 			
 					<h1>PRIVACY POLICY</h1>
 					<p>This privacy statement discloses the information gathering and dissemination practices for this website. We will notify you of changes to our Privacy Policy by posting the new policy on this website and by e-mailing the new Privacy Policy to registered members. For this reason, we recommend that you review our Privacy Policy regularly so that you can stay informed of our practices.</p>
+					<p>This privacy statement discloses the information gathering and dissemination practices for this website. We will notify you of changes to our Privacy Policy by posting the new policy on this website and by e-mailing the new Privacy Policy to registered members. For this reason, we recommend that you review our Privacy Policy regularly so that you can stay informed of our practices.</p>
 
 			
 			</div>
